<resources>
    <string name="app_name">风勘神器</string>
    <string name="app_upgrade_tip_title">Release Notes (%1$s)</string>
    <string name="option_yes">是</string>
    <string name="option_no">否</string>
    <string name="business_edit_name">企业名称:</string>
    <string name="business_hint_name">请输入企业名称</string>
    <string name="business_edit_addr">企业地址:</string>
    <string name="business_hint_addr">请输入企业地址</string>
    <string name="business_edit_contacts">联系人:</string>
    <string name="business_hint_contacts">请输入联系人</string>
    <string name="business_edit_tel">联系电话:</string>
    <string name="business_hint_tel">请输入联系电话</string>
    <string name="business_edit_manager">总经理:</string>
    <string name="business_hint_manager">请输入总经理姓名</string>
    <string name="business_edit_deputy_manager">副总经理:</string>
    <string name="business_hint_deputy_manager">请输入副总经理姓名</string>
    <string name="business_edit_safe">质量安全:</string>
    <string name="business_hint_safe">请输入质量安全负责人信息</string>
    <string name="business_worker">普工</string>
    <string name="business_special_worker">特殊工</string>
    <string name="business_assets">固定资产</string>
    <string name="business_amount">年营业额</string>
    <string name="business_coverage">投保范围:</string>
    <string name="business_hint_coverage">请输入投保范围</string>
    <string name="license_business_license">营业执照</string>
    <string name="license_industry_license">行业许可</string>
    <string name="license_system_level">体系等级</string>
    <string name="spraying_options_1">1.安全玻璃是否有合格证、外观是否完好 </string>
    <string name="spraying_options_2">2.漏电保护器、电气开关能否满足防爆要求</string>
    <string name="spraying_options_3">3.电气线路是否采用镀锌管套管保护</string>
    <string name="spraying_options_4">4.照明是否符合防爆要求</string>
    <string name="spraying_options_5">5.喷漆室是否采用阻燃材料</string>
    <string name="spraying_options_6">6.安全门是否向外开启且门宽不小于75cm</string>
    <string name="spraying_options_7">7.通风模式是否采用上送下抽</string>
    <string name="spraying_options_8">8.送排风系统、喷气系统、消防系统是否连锁</string>
    <string name="spraying_options_9">9.风机及电机是否防爆</string>
    <string name="spraying_options_10">10.风管是否设置防火阀</string>
    <string name="spraying_options_11">11.各机电设备是否接地良好</string>
    <string name="spraying_options_12">12.安全警示标志是否齐全</string>
    <string name="spraying_options_13">13.人员防护穿戴是否正确有效</string>
    <string name="spraying_options_14">14.漆雾过滤设施是否完好有效</string>
    <string name="spraying_options_15">15.是否采用防静电措施</string>
    <string name="dry_options_1">1.送排风装置是否完好且正常运行</string>
    <string name="dry_options_2">2.风机电机是否防爆</string>
    <string name="dry_options_3">3.风管是否设置防火阀</string>
    <string name="dry_options_4">4.作业环境是否整洁清洁</string>
    <string name="dry_options_5">5.烤灯灯管、防护罩是否完好</string>
    <string name="dry_options_6">6.漆雾过滤设施是否完好有效</string>
    <string name="dry_options_7">7.人员防护穿戴是否正确有效</string>
    <string name="dry_options_8">8.除尘管口风量是否满足要求</string>
    <string name="dry_options_9">9.作业环境送排风是否正常工作</string>
    <string name="dry_options_10">10.气动工具是否使用正常</string>
    <string name="dry_options_11">11.是否采用防静电措施</string>
    <string name="dry_options_12">12.漏电保护器、电气开关能否满足防爆要求</string>
    <string name="dry_options_13">13.电气线路是否采用镀锌管套管保护</string>
    <string name="cutting_options_1">1.设备线路是否完好，接线是否良好</string>
    <string name="cutting_options_2">2.设备安全附件是否完好</string>
    <string name="cutting_options_3">3.设备是否良好接地</string>
    <string name="cutting_options_4">4.作业环境是否整洁清洁</string>
    <string name="cutting_options_5">5.设备操作接触部位绝缘保护是否良好</string>
    <string name="cutting_options_6">6.是否定点操作，不占用其他区域及通道</string>
    <string name="cutting_options_7">7.人员防护穿戴是否正确有效</string>
    <string name="cutting_options_8">8.除尘管口风量是否满足要求</string>
    <string name="cutting_options_9">9.作业环境送排风是否正常工作</string>
    <string name="cutting_options_10">10.气动工具是否使用正常</string>
    <string name="cutting_options_11">11.电控箱是否清洁整洁，接线是否良好</string>
    <string name="cutting_options_12">12.电控箱进出线孔是否封堵</string>
    <string name="cutting_options_13">13.电气照明是否有防尘保护</string>
    <string name="grinding_options_1">1.手持工具线路是否完好，接线是否良好</string>
    <string name="grinding_options_2">2.风机是否开启且运转良好</string>
    <string name="grinding_options_3">3.是否定点操作，不占用其他区域及通道</string>
    <string name="grinding_options_4">4.作业环境是否整洁清洁</string>
    <string name="grinding_options_5">5.电控箱是否清洁整洁，接线是否良好</string>
    <string name="grinding_options_6">6.电控箱进出线孔是否封堵</string>
    <string name="grinding_options_7">7.人员防护穿戴是否正确有效</string>
    <string name="grinding_options_8">8.除尘管口风量是否满足要求</string>
    <string name="grinding_options_9">9.电气照明是否有防尘保护</string>
    <string name="grinding_options_10">10.是否定期定时清洗作业区域</string>
    <string name="dustRemoval_optinos_1">1.是否定期清理</string>
    <string name="dustRemoval_optinos_2">2.设备密闭性是否良好</string>
    <string name="dustRemoval_optinos_3">3.产尘点是否装有吸尘罩</string>
    <string name="dustRemoval_optinos_4">4.设备转动部位是否有防护设施</string>
    <string name="dustRemoval_optinos_5">5.电控柜是否清洁整洁，接线是否良好</string>
    <string name="dustRemoval_optinos_6">6.集尘箱作业是否使用安全照明、氧气检测仪</string>
    <string name="dustRemoval_optinos_7">7.设备金属外壳接地是否良好</string>
    <string name="dustRemoval_optinos_8">8.除尘设备运行时人孔门是否关闭</string>
    <string name="dustRemoval_optinos_9">9.管线照明是否有防尘保护</string>
    <string name="dustRemoval_optinos_10">10.布袋清理时人员防护穿戴是否正确有效</string>
    <string name="dustRemoval_optinos_11">11.是否采用绝缘措施操作控制箱的压扣</string>
    <string name="dustRemoval_optinos_12">12.风机房是否无杂物堆放</string>
    <string name="dustRemoval_optinos_13">13.卸灰阀检修清理时是否采用工器具操作</string>
    <string name="dustRemoval_optinos_14">14.是否在除尘器前面设有火星捕集器</string>
    <string name="dustRemoval_optinos_15">15.设备是否具有静电释放措施、导电纤维</string>
    <string name="material_options_1">1. 是否有自动灭火装置</string>
    <string name="material_options_2">2. 是否配置了足量且有效的消防器材</string>
    <string name="material_options_3">3. 现场是否张贴安全警示标志</string>
    <string name="material_options_4">4. 库房是否执行定置定位管理</string>
    <string name="material_options_5">5. 配电箱柜是否被阻挡（半径1M范围内不得有杂物）</string>
    <string name="material_options_6">6. 消防器材是否被阻挡（半径1M范围内不得有杂物）</string>
    <string name="material_options_7">7. 电气线路敷设是否符合要求</string>
    <string name="material_options_8">8. 是否分垛储存</string>
    <string name="material_options_9">9. 每垛占地面积是否＜100㎡，垛与垛间距是否＞1m，垛与墙间距是否＞0.5m，垛与梁、柱间距是否＞0.3m，主要通道的宽度是否＞2m</string>
    <string name="material_options_10">10.是否禁用碘钨灯和超过六十瓦以上的白炽灯等高温照明灯具</string>
    <string name="material_options_11">11.使用日光灯等低温照明灯具和其他防燃型照明灯具时，是否对镇流器采取隔热、散热等防火保护措施</string>
    <string name="material_options_12">12.垂直下方与储存物品水平间距离是否＞0.5m</string>
    <string name="material_options_13">13.库房外是否单独安装开关箱</string>
    <string name="material_options_14">14.保管人员离库时，是否拉闸断电</string>
    <string name="danger_options_1">1. 操作人员是否得穿戴易产生静电的工作服、帽</string>
    <string name="danger_options_2">2. 是否在进口设置了静电释放装置</string>
    <string name="danger_options_3">3. 现场是否张贴安全警示标志</string>
    <string name="danger_options_4">4. 是否有自动灭火装置</string>
    <string name="danger_options_5">5. 是否配置了足量且有效的消防器材</string>
    <string name="danger_options_6">6. 是否满足防溢流</string>
    <string name="danger_options_7">7. 是否设置有可燃气体检测报警装置</string>
    <string name="danger_options_8">8. 可燃气体检测报警装置是否与送排风设备联动</string>
    <string name="danger_options_9">9. 风机电机是否防爆</string>
    <string name="danger_options_10">10.照明、开关是否防爆</string>
    <string name="danger_options_11">11.电气线路是否穿金属管</string>
    <string name="danger_options_12">12.浸有涂料、稀释剂的破布、沙团、手套和工作服等是否及时清理</string>
    <string name="danger_options_13">13.库房地面是否防潮、防渗，库房内是否保持清洁</string>
    <string name="danger_options_14">14.是否执行双人双锁</string>
    <string name="danger_options_15">15.库房整体避雨、避晒是否良好</string>
    <string name="waste_options_1">1. 委外的危废回收机构是否具备相应资质与技术条件</string>
    <string name="waste_options_2">2. 贮存、运输是否分类</string>
    <string name="waste_options_3">3. 可燃危废品贮存区是否设置相应防爆措施</string>
    <string name="waste_options_4">4. 是否配置了足量且有效的消防器材</string>
    <string name="waste_options_5">5. 现场是否张贴安全警示标志</string>
    <string name="waste_options_6">6. 火源管理是否良好</string>
    <string name="waste_options_7">7. 库房整体避雨、避晒是否良好</string>
    <string name="waste_options_8">8. 照明、开关是否防爆、电气线路是否穿金属管</string>
    <string name="spare_options_1">1. 是否配置了足量且有效的消防器材</string>
    <string name="spare_options_2">2. 电气线路敷设是否合规</string>
    <string name="office_options_1">1.多层办公楼是否具备至少2个应急出口</string>
    <string name="office_options_2">2.办公用电是否符合防火管理</string>
    <string name="office_options_3">3.是否配置了足量且有效的消防器材</string>
    <string name="office_options_4">4.排水是否畅通</string>
    <string name="office_options_5">5.相关应急疏散标志是否良好</string>
    <string name="office_options_6">6.是否备有应急物资</string>
    <string name="surroundings_options_1">1.周边道路排水是否良好</string>
    <string name="surroundings_options_2">2.厂区外25M内是否有火灾爆炸风险</string>
    <string name="surroundings_options_3">3.周边消防救援机构是否在5分钟内可以到达</string>
    <string name="surroundings_options_4">4.（水文地质查勘.杨博）</string>
    <string name="construction_options_1">1.厂房、仓库是否达到2级耐火等级</string>
    <string name="construction_options_2">2.建、构筑物是否有明显缺陷、裂痕</string>
    <string name="construction_options_3">3.厂房内搭建是否合规</string>
    <string name="aid_options_1">1.入厂是否设有限速标志及减速梗</string>
    <string name="aid_options_2">2.厂区内是否已设置人车分流地线</string>
    <string name="aid_options_3">3.厂区内是否设置避雷设施，各点位是否检测</string>
    <string name="aid_options_4">4.厂区内通道是否满足消防车行驶，且有消防车调头区域</string>
    <string name="aid_options_5">5.厂区内排水是否良好</string>
    <string name="aid_options_6">6.厂区内机动车、非机动车管理是否良好</string>
    <string name="aid_options_7">7.厂区内安保运行是否良好</string>
    <string name="aid_options_8">8.厂区内弱电系统是否良好</string>
    <string name="aid_options_9">9.相关预案是否定期演练</string>
    <string name="aid_options_10">10.各类操作人员是否持证</string>
    <string name="wood_dry_options_1">1.送排风装置是否完好且正常运行</string>
    <string name="wood_dry_options_2">2.电气线路是否穿管保护</string>
    <string name="wood_dry_options_3">3.消防器材是否充足、完好</string>
    <string name="wood_dry_options_4">4.安全警示标志是否齐全</string>
    <string name="wood_dry_options_5">5.干燥作业是否有消防应急措施</string>
    <string name="wood_dry_options_6">6.干燥设备是否定期保养，加润滑油</string>
    <string name="wood_dry_options_7">7.是否对设备进行检查防止老化磨损产生火花</string>
    <string name="wood_dry_options_8">8.设备接线是否良好</string>
    <string name="wood_dry_options_9">9.是否执行禁火管理</string>
    <string name="wood_dry_options_10">10.人员防护穿戴是否正确有效</string>
    <string name="wood_dry_options_11">11.干燥后的木料或初始单板是否进行良好散热</string>
    <string name="wood_glue_options_1">1.设备线路是否完好，接线是否良好</string>
    <string name="wood_glue_options_2">2.设备安全附件是否完好</string>
    <string name="wood_glue_options_3">3.设备是否良好接地</string>
    <string name="wood_glue_options_4">4.作业环境是否整洁清洁</string>
    <string name="wood_glue_options_5">5.设备操作接触部位绝缘保护是否良好</string>
    <string name="wood_glue_options_6">6.电气开关能否满足防爆要求</string>
    <string name="wood_glue_options_7">7.人员防护穿戴是否正确有效</string>
    <string name="wood_glue_options_8">8.安全警示标志是否齐全</string>
    <string name="wood_glue_options_9">9.是否采用防静电措施</string>
    <string name="wood_glue_options_10">10.排风设备电机是否防爆</string>
    <string name="wood_glue_options_11">11.电控设施是否良好防爆</string>
    <string name="wood_glue_options_12">12.照明是否防爆</string>
    <string name="wood_glue_options_13">13.消防器材是否充足、完好</string>
    <string name="wood_glue_options_14">14.是否设置洗眼、淋雨设施</string>
    <string name="wood_lamination_options_1">1.热压后是否摊开散热</string>
    <string name="wood_lamination_options_2">2.风机是否开启且运转良好</string>
    <string name="wood_lamination_options_3">3.压合后的板材是否定位管理，不占用其他区域及通道</string>
    <string name="wood_lamination_options_4">4.电控箱是否清洁整洁，接线是否良好</string>
    <string name="wood_lamination_options_5">5.电控箱是否良好接地</string>
    <string name="wood_lamination_options_6">6.人员防护穿戴是否正确有效</string>
    <string name="wood_lamination_options_7">7.消防器材</string>
    <string name="wood_lamination_options_8">8.电气照明是否有防尘保护</string>
    <string name="wood_lamination_options_9">9.是否定期定时清洗作业区域</string>
    <string name="wood_lamination_options_10">10.消防器材是否充足、完好</string>
    <string name="wood_tailoring_options_1">1.手持工具线路是否完好，接线是否良好</string>
</resources>